Pull up revision 1.65 (requested by itojun):   Avoid panic caused by shared cluster mbuf overwrite on multicast   packet loopback for packets with certain sizes.  Fixes PR#9020.